--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
     </style>
 
     <script type="text/javascript">
-
+    
+    // Bilderquelle: https://github.com/Torridity/dsworkbench
     window.onload = function() {
         var Main = {
             data() {
@@ -239,14 +240,14 @@
                     prePath: 'resources/',
                     troopsImg: {
                         description: 'description',
-                        spear: 'unit_spear.png',
-                        sword: 'unit_sword.png',
-                        axe: 'unit_axe.png',
-                        bow: 'unit_archer.png',
-                        lkav: 'unit_light.png',
-                        bkav: 'unit_marcher.png',
-                        skav: 'unit_heavy.png',
-                        pala: 'unit_knight.png'
+                        spear: 'spear.png',
+                        sword: 'sword.png',
+                        axe: 'axe.png',
+                        bow: 'archer.png',
+                        lkav: 'light.png',
+                        bkav: 'marcher.png',
+                        skav: 'heavy.png',
+                        pala: 'knight.png'
                     },
                     troopsData: [{
                         description: 'Truppen',
@@ -611,6 +612,9 @@
                 </el-table-column>
             </el-table>
         </el-row>
+        <el-row>
+            Welt 167, Bilderquelle: https://github.com/Torridity/dsworkbench, Stand: 13.06.2019
+        </el-row>    
     </div>
 </body>
 
