--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             data() {
                 return {
                     show: true,
-                    inputTroops: '(100) (50) (200) (50) (100) (20) (15) (1)',
+                    inputTroops: '',
                     maxHours: '2',
                     maxMin: '0',
                     calcMode: 'normal',
