--- a/index.html
+++ b/index.html
@@ -613,7 +613,11 @@
             </el-table>
         </el-row>
         <el-row>
-            Welt 167, Bilderquelle: https://github.com/Torridity/dsworkbench, Stand: 13.06.2019
+            Einstellungen gelten für Welt 167<br>
+            Bilderquelle: <a href="https://github.com/Torridity/dsworkbench">DS Workbench</a><br>
+            Source-Code: <a href="https://github.com/webExplorerGuru/ds-raubzug-rechner>ds-raubzug-rechner</a><br>
+            License: <a href="http://www.apache.org/licenses/">Apache License Version 2.0</a><br>
+            Stand: 19.06.2019
         </el-row>    
     </div>
 </body>
