--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         <el-row>
             Einstellungen gelten für Welt 167<br>
             Bilderquelle: <a href="https://github.com/Torridity/dsworkbench">DS Workbench</a><br>
-            Source-Code: <a href="https://github.com/webExplorerGuru/ds-raubzug-rechner>ds-raubzug-rechner</a><br>
+            Source-Code und Erklärungen: <a href="https://github.com/webExplorerGuru/ds-raubzug-rechner>ds-raubzug-rechner</a><br>
             License: <a href="http://www.apache.org/licenses/">Apache License Version 2.0</a><br>
             Stand: 19.06.2019
         </el-row>    
