--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
                         }
                     }
 
-                    var P = [2, 3, 1, 0, 5, 6, 4, 7];
+                    // var P = [2, 3, 1, 0, 5, 6, 4, 7];
+                    var P = [7, 6, 5, 4, 0, 1, 2, 3];
                     var RK = [0, 0, 0, 0];
                     var AR = [
                         [0, 0, 0, 0, 0, 0, 0, 0],
