--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
     <div id="app">
         <el-row :gutter="20" justify="center">
             <el-col :span="10">
-                <el-input class="wide-input" @focus="$event.target.select()" placeholder="Hier kopierte Truppen einfügen zB: (100) (50) (200) (50) (100) (20) (15) (1)" v-model="inputTroops"></el-input>
+                <el-input class="wide-input" @focus="$event.target.select()" prefix-icon="el-icon-copy-document" placeholder="Hier kopierte Truppen einfügen zB: (100) (50) (200) (50) (100) (20) (15) (1)" v-model="inputTroops"></el-input>
             </el-col>
             <el-col :span="8" class="mt">
                 <el-radio-group v-model="worldModel" @change="changeWorld" size="medium">
@@ -586,7 +586,7 @@
             </el-col>
             <el-col :span="6">
                 <div class="div-b">
-                    <el-button @click="extractTroops">Truppen übernehmen</el-button>
+                    <el-button icon="el-icon-thumb" @click="extractTroops">Truppen übernehmen</el-button>
                 </div>
             </el-col>
         </el-row>
