--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         color: white;
         display: block;
     }
+        
+    i {
+        color: #5b390d;
+    }
 
     .right-align {
         float: right;
