--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="googlebot" content="noindex, nofollow">
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <style id="compiled-css" type="text/css">
-    @import url("//unpkg.com/element-ui@2.5.3/lib/theme-chalk/index.css");
+    @import url("//unpkg.com/element-ui/lib/theme-chalk/index.css");
 
     .el-button {
         margin-bottom: 10px;
@@ -572,7 +572,7 @@
 
 <body>
     <script src="//unpkg.com/vue/dist/vue.js"></script>
-    <script src="//unpkg.com/element-ui@2.5.3/lib/index.js"></script>
+    <script src="//unpkg.com/element-ui/lib/index.js"></script>
     <div id="app">
         <el-row :gutter="20" justify="center">
             <el-col :span="10">
