--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     .el-button:focus {
         color: white;
     }
+        
+    .el-input__icon {
+        color: #5b390d;   
+    }
 
     .text {
         font-size: 14px;
