--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     }
         
     .el-input__icon {
-        color: #5b390d;   
+        background-color: #5b390d;
+        color: white;
     }
 
     .text {
