--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     }
         
     .el-input__icon {
-        background-color: #5b390d;
-        color: white;
+        color: #5b390d;
     }
 
     .text {
